--- a/project.Rmd
+++ b/project.Rmd
@@ -2,11 +2,16 @@
 title: "Project"
 author: "Loc Dam"
 date: "2022-11-22"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
+  word_document: default
 ---
 
 ```{r setup, include=FALSE}
+options(tinytex.verbose = TRUE)
 knitr::opts_chunk$set(echo = TRUE)
+
 ```
 
 ```{r}
